syntax = "proto3";
package sequencer;
import "bignum.proto";
import "trade.proto";

option java_multiple_files = true;
option java_package = "co.chainring.sequencer.proto";
option java_outer_classname = "BalanceSchema";

message Deposit {
  string asset = 1;
  uint64 wallet = 2;
  IntegerValue amount = 3;
  string externalGuid = 4;
}

message Withdrawal {
  string asset = 1;
  uint64 wallet = 2;
  IntegerValue amount = 3;
  IntegerValue nonce = 4;
  string signature = 5;
  string externalGuid = 6;
}

message FailedWithdrawal {
  string asset = 1;
  uint64 wallet = 2;
  IntegerValue amount = 3;
}

message FailedSettlement {
  uint64 buyWallet = 1;
  uint64 sellWallet = 2;
  string marketId = 3;
  TradeCreated trade = 4;
}

message BalanceBatch {
  string guid = 1;
  repeated Deposit deposits = 2;
  repeated Withdrawal withdrawals = 3;
  repeated FailedWithdrawal failedWithdrawals = 4;
  repeated FailedSettlement failedSettlements = 5;
}